[gd_scene load_steps=8 format=3 uid="uid://c8ka7jmra66m6"]

[ext_resource type="Script" path="res://characters/Player.gd" id="1_5gqt8"]
[ext_resource type="Texture2D" uid="uid://7e0b706ita5q" path="res://art/playerGrey_up1.png" id="1_matiy"]
[ext_resource type="Texture2D" uid="uid://2xslpu8cycjy" path="res://art/playerGrey_up2.png" id="2_v3b3r"]
[ext_resource type="Texture2D" uid="uid://bf8gqf5n6k8oq" path="res://art/playerGrey_walk1.png" id="3_hxwij"]
[ext_resource type="Texture2D" uid="uid://cxg7yejnqr55n" path="res://art/playerGrey_walk2.png" id="4_ytqdm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4mv2w"]
animations = [{
"frames": [ExtResource("1_matiy"), ExtResource("2_v3b3r")],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [ExtResource("3_hxwij"), ExtResource("4_ytqdm")],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c2b8j"]
radius = 27.0
height = 66.0

[node name="Player" type="Area2D"]
script = ExtResource("1_5gqt8")
metadata/_edit_group_ = true

[node name="AnimatedSprite2d" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
frames = SubResource("SpriteFrames_4mv2w")
animation = &"up"

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_c2b8j")

[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
